# ChemGraph

./: .gitignore  README.md  pyproject.toml
chemgraph/: chemgraph.py  constants.py
chemgraph/constants/: colors.py  graph.py  periodic_table.py
chemgraph/fragment/: detection.py
chemgraph/geometry/parser/: __init__.py  angles.py  bonds.py  dihedrals.py  registry.py
chemgraph/inference/: bonds.py  geometry.py
chemgraph/io/: __init__.py  atoms.py  mol.py  registry.py  xyz.py
chemgraph/metrics/: __init__.py  flexibility.py
chemgraph/utils/: math.py  pathfinder.py
chemgraph/visualize/: graph.py
tests/: test_fragments.py  test_geometry_parser.py  test_inference_bonds.py  test_io.py  test_metrics.py  test_visualization.py
tests/files/: azulene.xyz  cyclohexane.xyz  cyclohexane_write.xyz
