[project]
name = "chemgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ase>=3.26.0",
    "cell2mol",
    "networkx>=3.5",
    "numpy>=2.3.5",
    "pytest>=9.0.1",
    "rdkit>=2025.9.1",
]

[tool.uv.sources]
cell2mol = { git = "https://github.com/lcmd-epfl/cell2mol.git", rev = "c205a2541a9c0bd2f3657f00b9f90dd3812a3097" }
